2003-07-29  Wakaba  <wakaba@suika.fam.cx>

	* Error.pm: New module.

2003-05-10  Wakaba  <w@offweb.ddo.jp>

	* Formatter.pm (replace): Bug fix of pattern.

2003-04-29  Wakaba  <w@offweb.ddo.jp>

	* Formatter.pm (replace): {...} block is supported.
	(Message::Util::Formatter::_returned): New package.  It is very very tiny
	subset of SuikaWiki::Markup::XML.
	(replace): Return structured string, not bare string.  This function is
	useful to make tree (such as XML's) from formatting template (and its nested
	parameters).

2003-03-28  Wakaba  <w@offweb.ddo.jp>

	* Formatter.pm (replace): Treat oo of "str"oo of attr value as option and parse attr value if 'p' option is specified.
	(replace): Replace '-' to '_' in attr name.

2003-01-26  Wakaba  <w@cube.wakaba.ssm>

	* Formatter.pm (replace): Trim attribute name/value pair.

2003-01-04  Wakaba  <w@suika.fam.cx>

	* Formatter.pm (replace): Don't split by ',' in quoted-strings.

2002-12-15  Wakaba  <w@suika.fam.cx>

	* Formatter.pm (%char;): Removed.

2002-12-05  Wakaba  <w@suika.fam.cx>

	* Formatter.pm (%FMT2TXT): New (internal) initial format rule,
	"-bare_text".
	(replace): "Replace" non-%-text with "-bare_text" rule.
	(pod): Methods and initial rules are documented.

2002-12-04  Wakaba  <w@suika.fam.cx>

	* Formatter.pm (replace): Accept ")" in quoted-string.

2002-11-13  Wakaba <w@suika.fam.cx>

	* ChangeLog: New file.
	* Formatter.pm: New module.