@@ -1,0 +1,5 @@
+2003-08-05  Wakaba  <wakaba@suika.fam.cx>
+
+	* TextParser.pm: New module.
+	* ChangeLog: New file.
+
