@@ -1,3 +1,9 @@
+2003-08-05  Wakaba  <wakaba@suika.fam.cx>
+
+	* Error.pm (_default_error_handler): Syntax fix.
+
+	* Error/: New directory.
+
 2003-07-29  Wakaba  <wakaba@suika.fam.cx>
 
 	* Error.pm: New module.
